简单修改了一下，似乎符合修改订阅的目的了

--- a/config/config
+++ b/config/config
@@ -63,17 +63,17 @@
 
 # Authentication method
 # Value: None | htpasswd | IMAP | LDAP | PAM | courier | http | remote_user | custom
-#type = None
+type = htpasswd
 
 # Custom authentication handler
 #custom_handler =
 
 # Htpasswd filename
-#htpasswd_filename = /radicale/users
+htpasswd_filename = /radicale/users
 
 # Htpasswd encryption method
 # Value: plain | sha1 | ssha | crypt | bcrypt | md5
-#htpasswd_encryption = plain
+htpasswd_encryption = crypt
 
 # LDAP server URL, with protocol and port
 #ldap_url = ldap://localhost:389/
